--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,7 @@ body {
   background-size: cover;
   padding: 180px 0 90px 0;
   color: #eee;
+  
 }
 
 .navbar {
@@ -29,6 +30,7 @@ body {
 .navbar ul li a {
   text-decoration: none;
   color: #eee;
+  letter-spacing: 1px;
 }
 
 .Home {
@@ -59,14 +61,14 @@ body {
 .header {
   margin: 10px 0;
   font-size: 30px;
-  letter-spacing: 3px;
+  letter-spacing: 6px;
   font-weight: solid;
 }
 
 #button {
   margin: 20px 0;
   background-color: #c52ab0;
-  padding: 12px 24px;
+  padding: 14px 28px;
   color: white;
   display: inline-block;
   border-style: none;
@@ -89,11 +91,18 @@ p {
   font-size: 15px;
 }
 
+
+
 #result {
   border-bottom: 1px solid #eee;
   font-size: 20px;
-  padding: 10px 0;
+  margin: 30px 100px;
+  padding: 30px 0;
+  width: auto;
   text-align: center;
+  background-color: #250622;
+  color: #eee;
+  border-radius: 6px;
 }
 
 /* Responsive Breakpoint */
